finished backlog and defect first report.

--- a/app/views/pages/backlog.html.erb
+++ b/app/views/pages/backlog.html.erb
@@ -1,12 +1,12 @@
-<div class="span12" style="margin-top: -20px;">
+<!-- <div class="span12" style="margin-top: -20px;">
         <ul class="pager">
             <li><a id='sprint1' href="javascript:void(0)" onclick="$('#ichart').removeAttr('style').css({'min-height': 'auto', 'margin-bottom': '30px'});populateChart('Sprint 1')">SPRINT 1</a></li>
             <li><a id='sprint2' href="javascript:void(0)" onclick="$('#ichart').removeAttr('style').css({'min-height': 'auto', 'margin-bottom': '30px'});populateChart('Sprint 2')">SPRINT 2</a></li>
             <li><a id='sprint3' href="javascript:void(0)" onclick="$('#ichart').removeAttr('style').css({'min-height': 'auto', 'margin-bottom': '30px'});populateChart('Feature Freeze')">FEATURE FREEZE</a></li>
         </ul>
-    </div>
+    </div> -->
 
-<div id="ichart" class="row span12 center-block" style='height: auto; min-height: 680px'>
+<div id="ichart" class="row span12 center-block" style='height: auto; min-height: 800px'>
 	
 </div>
 
@@ -75,19 +75,19 @@
             },
 	        series: [{
 	            name: 'Not Started',
-	            data: [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],
+	            data: <%= @total_count_not_start %>,
 	            color: '#FF5B79'
 	        }, {
 	            name: 'Dev In-Progress',
-	            data: [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],
+	            data: <%= @total_count_dev_in_progress %>,
 	            color: '#6C71FF'
 	        }, {
 	            name: 'QA In-Progress',
-	            data: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+	            data: <%= @total_count_qa_in_progress %>,
 	            color: '#2531FF'
 	        }, {
 	            name: 'Completed',
-	            data: [8, 14, 0, 4, 9, 15, 6, 25, 10, 9, 12],
+	            data: <%= @total_count_complete %>,
 	            color: '#008000'
 	        }]
 	    });
