--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,8 +13,8 @@
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="backlog"><i class="fa fa-chevron-right"></i> BACKLOG</a></li>
-			<li><a href="defect"><i class="fa fa-chevron-right"></i> DEFECT</a></li>
+			<li class="active"><a href="/pages/backlog"><i class="fa fa-chevron-right"></i> BACKLOG</a></li>
+			<li><a href="/pages/defect"><i class="fa fa-chevron-right"></i> DEFECT</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="mailto:ewang@successfactors.com"><i class="fa fa-envelope-o"></i> SUPPORT</a></li>
